--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "http-server": "^0.7.4"
+  },
+  "dependencies": {
+    "lodash": "^3.3.1",
+    "phaser": "git://github.com/notnullgames/phaser"
   }
 }
