--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend-nanodegree-arcade-game",
+  "name": "js-coleopteres-game",
   "version": "1.0.0",
-  "description": "frontend-nanodegree-arcade-game ===============================",
+  "description": "yet another js iso game",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/udacity/frontend-nanodegree-arcade-game",
   "devDependencies": {
-    "bower": "^1.3.12",
-    "grunt": "^0.4.5",
-    "http-server": "^0.7.4"
+    "gulp": "^3.8.11",
+    "gulp-load-plugins": "^0.8.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-watch": "^4.1.1",
+    "gulp-webpack": "^1.2.0"
   },
   "dependencies": {
     "lodash": "^3.3.1",
