--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^4.6.6",
     "babel-loader": "^4.0.0",
     "gulp": "^3.8.11",
+    "gulp-jshint": "^1.9.2",
     "gulp-load-plugins": "^0.8.1",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.5.0",
