--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^4.6.6",
     "babel-loader": "^4.0.0",
+    "browserify-shim": "^3.8.9",
     "gulp": "^3.8.11",
     "gulp-jshint": "^1.9.2",
     "gulp-load-plugins": "^0.8.1",
@@ -26,10 +27,11 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-watch": "^4.1.1",
     "gulp-webpack": "^1.2.0",
-    "webpack": "^1.7.2"
+    "node-libs-browser": "^0.5.2",
+    "webpack": "^1.10.1"
   },
   "dependencies": {
-    "lodash": "^3.3.1",
-    "phaser": "git://github.com/notnullgames/phaser"
+    "lodash": "^3.10.0",
+    "phaser": "^2.3.0"
   }
 }
